[gd_scene load_steps=20 format=3 uid="uid://bvo17ax1r38sv"]

[ext_resource type="Script" path="res://player/player.gd" id="1_aaaov"]
[ext_resource type="Texture2D" uid="uid://detxkf081dmks" path="res://addons/Tiny Swords/Factions/Knights/Troops/Warrior/Red/Warrior_Red.png" id="1_d33t7"]
[ext_resource type="PackedScene" uid="uid://cel4bh30782oq" path="res://misc/ritual.tscn" id="2_ash2f"]
[ext_resource type="PackedScene" uid="uid://7tngrpvymu7m" path="res://misc/big_skull.tscn" id="2_ir2ba"]

[sub_resource type="CircleShape2D" id="CircleShape2D_8s204"]
radius = 15.1327

[sub_resource type="Animation" id="Animation_cjhpj"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(0, 0)]
}

[sub_resource type="Animation" id="Animation_stwi2"]
resource_name = "attack_down_1"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 4), Vector2i(1, 4), Vector2i(2, 4), Vector2i(3, 4), Vector2i(4, 4), Vector2i(5, 4)]
}

[sub_resource type="Animation" id="Animation_dr8fh"]
resource_name = "attack_down_2"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 5), Vector2i(1, 5), Vector2i(2, 5), Vector2i(3, 5), Vector2i(4, 5), Vector2i(5, 5)]
}

[sub_resource type="Animation" id="Animation_o3li0"]
resource_name = "attack_side_1"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 2), Vector2i(1, 2), Vector2i(2, 2), Vector2i(3, 2), Vector2i(4, 2), Vector2i(5, 2)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.3),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"deal_damage_to_enemies"
}]
}

[sub_resource type="Animation" id="Animation_7vsyq"]
resource_name = "attack_side_2"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 3), Vector2i(1, 3), Vector2i(2, 3), Vector2i(3, 3), Vector2i(4, 3), Vector2i(5, 3)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.3),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"deal_damage_to_enemies"
}]
}

[sub_resource type="Animation" id="Animation_8jjk4"]
resource_name = "attack_up_1"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 6), Vector2i(1, 6), Vector2i(2, 6), Vector2i(3, 6), Vector2i(4, 6), Vector2i(5, 6)]
}

[sub_resource type="Animation" id="Animation_a4qjw"]
resource_name = "attack_up_2"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 7), Vector2i(1, 7), Vector2i(2, 7), Vector2i(3, 7), Vector2i(4, 7), Vector2i(5, 7)]
}

[sub_resource type="Animation" id="Animation_jvtec"]
resource_name = "idle"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 0), Vector2i(1, 0), Vector2i(2, 0), Vector2i(3, 0), Vector2i(4, 0), Vector2i(5, 0)]
}

[sub_resource type="Animation" id="Animation_lbh44"]
resource_name = "run"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 1), Vector2i(1, 1), Vector2i(2, 1), Vector2i(3, 1), Vector2i(4, 1), Vector2i(5, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_fcn5f"]
_data = {
"RESET": SubResource("Animation_cjhpj"),
"attack_down_1": SubResource("Animation_stwi2"),
"attack_down_2": SubResource("Animation_dr8fh"),
"attack_side_1": SubResource("Animation_o3li0"),
"attack_side_2": SubResource("Animation_7vsyq"),
"attack_up_1": SubResource("Animation_8jjk4"),
"attack_up_2": SubResource("Animation_a4qjw"),
"idle": SubResource("Animation_jvtec"),
"run": SubResource("Animation_lbh44")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_puvfo"]
radius = 108.005

[sub_resource type="CircleShape2D" id="CircleShape2D_1pbt8"]
radius = 48.0104

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_f6bqu"]
bg_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_c6tpe"]
bg_color = Color(0.701687, 0.0102865, 0.0997318, 1)

[node name="Player" type="CharacterBody2D" groups=["player"]]
z_index = 1
motion_mode = 1
script = ExtResource("1_aaaov")
ritual_damage = 2
ritual_interval = 15.0
ritual_scene = ExtResource("2_ash2f")
health = 50
max_health = 50
death_prefab = ExtResource("2_ir2ba")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0, -29)
texture = ExtResource("1_d33t7")
hframes = 6
vframes = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -7)
shape = SubResource("CircleShape2D_8s204")
debug_color = Color(0, 0.6, 0.701961, 0.235294)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_fcn5f")
}
autoplay = "idle"

[node name="SwordArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="SwordArea"]
position = Vector2(0, -31)
shape = SubResource("CircleShape2D_puvfo")
debug_color = Color(0.294005, 0.605335, 0.501034, 0.313726)

[node name="HurtBoxArea" type="Area2D" parent="."]
position = Vector2(0, -31)

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBoxArea"]
shape = SubResource("CircleShape2D_1pbt8")
debug_color = Color(0.980258, 0, 0.381196, 0.42)

[node name="HealthProgressBar" type="ProgressBar" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -48.0
offset_top = 14.0
offset_right = 49.0
offset_bottom = 24.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/background = SubResource("StyleBoxFlat_f6bqu")
theme_override_styles/fill = SubResource("StyleBoxFlat_c6tpe")
value = 75.0
rounded = true
show_percentage = false
